syntax = "proto3";

package api.week4.v1;

import "google/api/annotations.proto";

option go_package = "github.com/zh1lu0/gocamp/api/week4/v1;v1";
option java_multiple_files = true;
option java_package = "api.week4.v1";

service Hello {
	rpc SayHello (SayHelloRequest) returns (SayHelloReply) {
		option (google.api.http) = {
			get: "/hello/{name}"
		};
	};
}

message SayHelloRequest {
	string name = 1;
}
message SayHelloReply {
	string message = 1;
}